--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,10 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
+    "paths": {
+      "@generated/*": ["src/generated/client/*"],
+      "@generated": ["src/generated/client"]
+    },
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": true,
